--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,10 @@
     "@turf/bbox": "^6.5.0",
     "@turf/bbox-polygon": "^6.5.0",
     "@turf/buffer": "^6.5.0",
-    "@turf/helpers": "^6.5.0"
+    "@turf/helpers": "^6.5.0",
+    "chart.js": "^3.9.1",
+    "chartjs-plugin-zoom": "^1.2.1",
+    "react-chartjs-2": "^4.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
