--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,7 @@
-REACT_APP_MAPBOX_TOKEN=your_mapbox_token_here
-REACT_APP_API_URL=http://localhost:8000
+REACT_APP_MAPBOX_TOKEN=xyz
+
+DB_USER=xyz
+DB_PASSWORD=xyz
+DB_HOST=xyz
+DB_PORT=xyz
+DB_NAME=xyz
