--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,3 +2,13 @@ fastapi==0.68.0
 uvicorn==0.15.0
 pyarrow==5.0.0
 shapely==1.8.0
+redis==4.5.1
+umap-learn==0.5.3
+numpy>=1.20.0
+pandas>=1.3.0
+scikit-learn>=0.24.0
+geopandas>=0.9.0
+pydantic>=1.8.0
+python-dotenv>=0.19.0
+numba>=0.51.0  # Required for UMAP
+scipy>=1.7.0   # Required for UMAP
