--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,37 +1,47 @@
 # Build stage
-FROM node:14 AS build
+FROM node:18-alpine AS builder
 
-# Set the working directory in the container
+# Set working directory
 WORKDIR /app
 
-# Copy package.json and package-lock.json
+# Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm install
+# Install dependencies with specific flags for production
+RUN npm ci --only=production
 
 # Install additional dependencies
 RUN npm install chart.js@3.9.1 chartjs-plugin-zoom@1.2.1 react-chartjs-2@4.3.1 @babel/plugin-proposal-private-property-in-object
 
-# Copy the current directory contents into the container
+# Copy source code
 COPY . .
 
 # Build the app
 RUN npm run build
 
 # Production stage
-FROM node:14-alpine
+FROM node:18-alpine
 
+# Set working directory
 WORKDIR /app
 
-# Install serve
-RUN npm install -g serve
+# Install serve with specific version
+RUN npm install -g serve@14.2.1
 
-# Copy build files from build stage
-COPY --from=build /app/build ./build
+# Create a non-root user
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup
 
-# Make port 3000 available to the world outside this container
+# Copy build files from builder stage
+COPY --from=builder /app/build ./build
+
+# Set proper ownership
+RUN chown -R appuser:appgroup /app
+
+# Switch to non-root user
+USER appuser
+
+# Expose port
 EXPOSE 3000
 
-# Run the app when the container launches
+# Run the app
 CMD ["serve", "-s", "build", "-l", "3000"]
