update docker frontend

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,14 +4,26 @@ FROM node:18-alpine AS builder
 # Set working directory
 WORKDIR /app
 
+# Increase Node's memory allocation
+ENV NODE_OPTIONS="--max-old-space-size=2048"
+
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm install --production=false
+# Install dependencies with memory optimization flags
+RUN npm install --production=false \
+    --no-optional \
+    --prefer-offline \
+    --no-audit \
+    --no-fund \
+    --quiet
 
-# Install additional dependencies (if still needed)
-RUN npm install chart.js@3.9.1 chartjs-plugin-zoom@1.2.1 react-chartjs-2@4.3.1 @babel/plugin-proposal-private-property-in-object
+# Install only the specific additional dependencies needed
+RUN npm install --no-optional \
+    chart.js@3.9.1 \
+    chartjs-plugin-zoom@1.2.1 \
+    react-chartjs-2@4.3.1 \
+    @babel/plugin-proposal-private-property-in-object
 
 # Copy source code
 COPY . .
