--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,6 @@
 version: '3.8'
 
 services:
-  backend:
-    build: 
-      context: ./backend
-      dockerfile: Dockerfile
-    ports:
-      - "8000:8000"
-    volumes:
-      - ./data:/app/data:ro
-    environment:
-      - PYTHONUNBUFFERED=1
-    deploy:
-      resources:
-        limits:
-          memory: 1G
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
   frontend:
     build:
       context: ./frontend
@@ -31,13 +11,9 @@ services:
       - backend
     environment:
       - NODE_ENV=production
-      - NODE_OPTIONS="--max-old-space-size=512"
     deploy:
       resources:
         limits:
-          memory: 1G
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+          memory: 4G
+        reservations:
+          memory: 2G
