--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,8 @@
 fastapi==0.104.1
-uvicorn==0.24.0
+uvicorn[standard]==0.24.0
 python-dotenv==1.0.0
-numpy==1.24.3
-pandas==2.1.3
-pyarrow==14.0.1
+numpy==1.26.2
 qdrant-client==1.7.0
 pydantic==2.5.0
-distutils==3.12.5
+setuptools==69.0.0
+wheel==0.42.0
